<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginScreenLayout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <include
        layout="@layout/login_banner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.294"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:fontFamily="arial"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/loginPhoneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.884">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/hintAppearance"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:drawableEnd="@mipmap/smartphone"
                android:drawablePadding="12dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="@integer/phone_number_length" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/loginWithPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/loginPhoneLayout"
        app:layout_constraintRight_toRightOf="@id/loginPhoneLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:background="@drawable/button_curved_red"
        android:text="@string/login_with_password"
        android:textColor="@android:color/white"
        android:fontFamily="arial"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginWithSMSButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginWithPasswordButton"
        app:layout_constraintLeft_toLeftOf="@id/loginWithPasswordButton"
        app:layout_constraintRight_toRightOf="@id/loginWithPasswordButton"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_curved_red"
        android:text="@string/login_with_sms"
        android:textColor="@android:color/white"
        android:fontFamily="arial"
        android:textSize="17sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>