<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PasswordLoginFragment"
    android:id="@+id/passwordScreenLayout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        layout="@layout/login_banner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:fontFamily="arial"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/enterPasswordSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintVertical_bias="0.36"
        android:textAlignment="viewEnd"
        android:text="@string/enter_login_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:fontFamily="arial"/>

    <LinearLayout
        android:id="@+id/loginPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.884">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/hintAppearance"
                app:passwordToggleEnabled="true"
                android:layoutDirection="rtl">
                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableStart="@mipmap/lock"
                    android:drawablePadding="16dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirmLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/loginPasswordLayout"
        app:layout_constraintRight_toRightOf="@id/loginPasswordLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:background="@drawable/button_curved_red"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        android:fontFamily="arial"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>