<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/requestBloodTypeShimmer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/red_circle"
        android:backgroundTint="@color/shimmer"
        android:fontFamily="arial"
        android:gravity="center"
        android:textColor="@color/shimmer"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/b_plus"/>

    <TextView
        android:id="@+id/requesterNameShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="arial"
        android:textColor="@color/shimmer"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/requestBloodTypeShimmer"
        app:layout_constraintTop_toTopOf="@id/requestBloodTypeShimmer"
        android:text="عبد الغفور البرعي"
        android:background="@color/shimmer"/>



    <TextView
        android:id="@+id/requestLocationShimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/requesterNameShimmer"
        app:layout_constraintStart_toStartOf="@id/requesterNameShimmer"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="arial"
        android:textColor="@color/shimmer"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/address_full"
        android:background="@color/shimmer" />

    <TextView
        android:id="@+id/requestBagsRequiredShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:fontFamily="arial"
        android:textColor="@color/shimmer"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/requesterNameShimmer"
        app:layout_constraintTop_toBottomOf="@id/requestLocationShimmer"
        android:text="@string/blood_bags"
        android:background="@color/shimmer"/>

    <TextView
        android:id="@+id/personsDonatingToRequestShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:fontFamily="arial"
        android:textColor="@color/shimmer"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/requesterNameShimmer"
        app:layout_constraintTop_toBottomOf="@id/requestBagsRequiredShimmer"
        android:text="@string/persons_going"
        android:background="@color/shimmer" />

    <TextView
        android:id="@+id/callRequesterIconShimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:drawableStartCompat="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personsDonatingToRequestShimmer"/>

</androidx.constraintlayout.widget.ConstraintLayout>