<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SMSFragment"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <include
        android:id="@+id/smsLoginBanner"
        layout="@layout/login_banner"/>

    <TextView
        android:id="@+id/smsScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/confirmation_code"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:fontFamily="arial"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/enterCodeSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintVertical_bias="0.4"
        android:textAlignment="viewEnd"
        android:text="@string/enter_code"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:fontFamily="arial"/>

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/verificationCodeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.78"
        app:layout_constraintVertical_bias="0.55"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="@integer/code_length"
        android:textIsSelectable="false"
        app:pinAnimationType="fromBottom"
        android:textSize="20sp"
        app:pinBackgroundDrawable="@drawable/sms_border"
        app:pinTextBottomPadding="20dp"
        android:layoutDirection="ltr" />

    <TextView
        android:id="@+id/resendSMSTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationCodeInput"
        android:layout_marginTop="50dp"
        android:fontFamily="arial"
        android:text="@string/resend_sms"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>